# sunsynk-ihd-35

./: .gitignore  README.md  platformio.ini
SunsynkIHD/lib/ui_800_480/ui/src/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
SunsynkIHD/lib/ui_800_480/ui/src/components/: ui_comp_hook.c
SunsynkIHD/lib/ui_800_480/ui/src/fonts/: ui_font_montserrat_56.c  ui_font_montserrat_72.c
SunsynkIHD/lib/ui_800_480/ui/src/images/: ui_img_1076282785.c  ui_img_1192762099.c  ui_img_1218748599.c  ui_img_1230882528.c  ui_img_1261930360.c  ui_img_1288183160.c  ui_img_1416811391.c  ui_img_1549501229.c  ui_img_1551709364.c  ui_img_1683162281.c  ui_img_1765460539.c  ui_img_1933564998.c  ui_img_207095971.c  ui_img_226794803.c  ui_img_264836261.c  ui_img_670870020.c  ui_img_705529016.c  ui_img_811431924.c  ui_img_836172127.c
SunsynkIHD/lib/ui_800_480/ui/src/screens/: ui_home.c  ui_plot.c
SunsynkIHD35/: Config_Example.h  DateTime.h  DateTime.ino  Graphics.cpp  Graphics.h  Graphics.ino  Secrets.h  Secrets_Example.h  SunsynkApi.cpp  SunsynkApi.h  SunsynkApi.ino  SunsynkIHD35.ino  Touch.h  Touch.ino  ui.c  ui.h  ui_config.c  ui_helpers.c  ui_home.c  ui_img_1076282785.c  ui_img_1521978509.c  ui_img_1549501229.c  ui_img_1551709364.c  ui_img_1651064979.c  ui_img_1683162281.c  ui_img_1765460539.c  ui_img_1833520713.c  ui_img_1933564998.c  ui_img_2090272629.c  ui_img_670870020.c
boards/: elecrow-esp32s3-hmi-35.json  elecrow-esp32s3-hmi-50.json  elecrow-esp32s3-hmi-70.json  esp32s3-n16r8-devkit.json
gui/: Solar_UI.spj
gui_480x320/: Solar_UI_480x320.sll  (+2 more)
(+97 files in other folders)
